k8s/manifests/base/cert-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: cert-manager
    labels:
        pod-security.kubernetes.io/enforce: restricted
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKbFg0Q0pJNHJRcC9MYjZ1
[...]
            xQQ1JmzY3kSrsDZL6wJYyxTW8tXLS6SrI0ZJ+AI40emFfsuq/mHEZg==
            -----END AGE ENCRYPTED FILE-----
          recipient: age1zeu46ksgr0upauaf4dd7ftftvxzxz4n32j8k89m484rezq575q2sqkdpsz
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Zys3eFk4UWd0R2JHdk56
[...]
            zGAIKwzUUfGW/scvag5bV1s5wF9nlWYzRfbkc10Cc2UH6XssboqGtA==
            -----END AGE ENCRYPTED FILE-----
          recipient: age1e09aexflt8pshjftfrvzenx7n0wux84wxxc2fdmu970yxz0jauzqyglyp7
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IHBpdi1wMjU2IHNYVTJ3ZyBBL2d5V3FJ
[...]
            TmA=
            -----END AGE ENCRYPTED FILE-----
          recipient: age1yubikey1q2agt4tz997s7q79vthfvu7gnd0yjmhgvvl7hmeqw8g8nd7fcxafxpr0vh6
    encrypted_regex: ^(data|stringData)$
    lastmodified: "2026-04-28T18:53:13Z"
    mac: ENC[AES256_GCM,data:PCoPmy+3gINAloG8ZcxBDDNjBzxkJNuMvVjBitrawVHQx0GWY+RjWxvhLIE9QacefQJBZzfS3w44lv8sXgYxgD1dfpUmd76M/12mns/BhcOWhdhnP4905kmKhSpS6BM5+bh0ddIW72MvuMqDjOwdB7rjRhboKU19YJN4c5fcMuM=,iv:OjYU7+NjiRGlu1BGxr62mjWlmUjSXHsq4Xoimc7FnXo=,tag:HaEmWwsKHfURcQfkT1jdeQ==,type:str]
    version: 3.12.2
