k8s/manifests/base/envoy-gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
