k8s/manifests/base/external-dns.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: external-dns
    labels:
        pod-security.kubernetes.io/enforce: restricted
sops:
    age:
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA2MnNTMk5mbmxZV2V0M3da
[...]
            qmPrIc8xpVF6dyBUzJdo09om2ESv/8/XuA3J1K7ETa1cQucATaeoog==
            -----END AGE ENCRYPTED FILE-----
          recipient: age1zeu46ksgr0upauaf4dd7ftftvxzxz4n32j8k89m484rezq575q2sqkdpsz
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGYWpxV1lKdk1GcHB0VWJD
[...]
            C5xGiPzLUnKtHNYS2s7LuKyCil/CoNsFa8x/1qEUMtDRulEfWSf/TQ==
            -----END AGE ENCRYPTED FILE-----
          recipient: age1e09aexflt8pshjftfrvzenx7n0wux84wxxc2fdmu970yxz0jauzqyglyp7
        - enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IHBpdi1wMjU2IHNYVTJ3ZyBBdUVRYUR6
[...]
            jBk=
            -----END AGE ENCRYPTED FILE-----
          recipient: age1yubikey1q2agt4tz997s7q79vthfvu7gnd0yjmhgvvl7hmeqw8g8nd7fcxafxpr0vh6
    encrypted_regex: ^(data|stringData)$
    lastmodified: "2026-04-28T18:53:13Z"
    mac: ENC[AES256_GCM,data:2l8XZtUzFqhdSNoUFFjo8BNXgbCuxxLAM5sZtrGTxU+tEiCqrHlI350Koy68gRSSCfcvfWg15uCvSwtLxI6IGQgAbjYsIIAF8Qx1/BUT6FoOjfS3AuUfMHbNlIPFdFaoEaXtiYK+PtQ6KWwOJHMBp0VDzGM+IKWupQvwbQBaTDk=,iv:A7HyyGRq1t4qyWS3RVuaFXscGTMN7XE7lrQ5kFn0Gl8=,tag:K5n48ME/F6sRc6Oeu7j5PA==,type:str]
    version: 3.12.2
