k8s/manifests/base/metrics-server.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metrics-server
  labels:
    pod-security.kubernetes.io/enforce: restricted
