k8s/manifests/base/fstrim.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fstrim
  labels:
    pod-security.kubernetes.io/enforce: privileged
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: fstrim
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
