k8s/manifests/base/zfs-data-scrub.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: zfs-scrub
  labels:
    pod-security.kubernetes.io/enforce: privileged
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: zfs-scrub
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
